<resources>
	<string name="app_name">Займы 2.0</string>
    <string name="login_hint">Имя</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="register_button_text">Зарегистрироваться</string>
    <string name="get_new_loan">Получить заём</string>
    <string name="empty_history_hint">"Здесь будет отображаться ваша история займов. \nА пока можете получить свой первый заём. \nНажмите на кнопку \"Получить заём\""
    </string>
    <string name="loan_conditions">Условия для заёма:</string>
    <string name="loan_conditions_max_amount">Максимальная сумма заёма:</string>
...
    <string name="loan_detail_amount">Сумма займа (в рублях):</string>
    <string name="loan_detail_percent">Процент (в %):</string>
    <string name="loan_detail_period">Период (в днях):</string>
    <string name="loan_detail_state">Статус:</string>
    <string name="how_to_get_loan">Получить заём можно в отделении банков-партнёров, либо просто зачислить его на карту, указав реквизиты(услуга не доступна в вашем регионе)</string>
    <string name="loan_details">Детали займа</string>
    <string name="loans_history">История займов</string>
    <string name="new_loan">Новый заём</string>
    <string name="authorization">Авторизация</string>
</resources>
